--- a/StajChallange/Resources/Base.lproj/Main.storyboard
+++ b/StajChallange/Resources/Base.lproj/Main.storyboard
@@ -53,38 +53,61 @@
                         <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
-                            <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" translatesAutoresizingMaskIntoConstraints="NO" id="1qh-Ku-yhp">
-                                <rect key="frame" x="54" y="113" width="289" height="128"/>
-                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                            <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" misplaced="YES" translatesAutoresizingMaskIntoConstraints="NO" id="1qh-Ku-yhp">
+                                <rect key="frame" x="63" y="113" width="289" height="128"/>
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="128" id="rJN-mS-zm3"/>
+                                </constraints>
                             </imageView>
                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="Label" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="vE7-Mo-tWY">
-                                <rect key="frame" x="54" y="249" width="289" height="40"/>
-                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
-                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" misplaced="YES" text="Label" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" minimumFontSize="22" translatesAutoresizingMaskIntoConstraints="NO" id="vE7-Mo-tWY">
+                                <rect key="frame" x="62" y="249" width="289" height="40"/>
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="40" id="DfJ-fS-qVw"/>
+                                </constraints>
+                                <fontDescription key="fontDescription" type="system" pointSize="30"/>
                                 <nil key="textColor"/>
                                 <nil key="highlightedColor"/>
                             </label>
-                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="Label" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="OaY-6d-38O">
-                                <rect key="frame" x="54" y="319" width="289" height="35"/>
-                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
-                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" misplaced="YES" text="Label" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="OaY-6d-38O">
+                                <rect key="frame" x="62" y="319" width="289" height="35"/>
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="35" id="Aac-q6-8me"/>
+                                </constraints>
+                                <fontDescription key="fontDescription" type="system" pointSize="25"/>
                                 <nil key="textColor"/>
                                 <nil key="highlightedColor"/>
                             </label>
-                            <label opaque="NO" userInteractionEnabled="NO" contentMode="top" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="Label" lineBreakMode="tailTruncation" numberOfLines="15" baselineAdjustment="alignBaselines" adjustsFontForContentSizeCategory="YES" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="SJ8-jg-ve1">
-                                <rect key="frame" x="54" y="376" width="289" height="408"/>
-                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
-                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
-                                <nil key="textColor"/>
-                                <nil key="highlightedColor"/>
-                            </label>
+                            <textView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" textAlignment="natural" translatesAutoresizingMaskIntoConstraints="NO" id="ZSp-MM-L8Y">
+                                <rect key="frame" x="28" y="370" width="353" height="421"/>
+                                <color key="backgroundColor" systemColor="systemBackgroundColor" cocoaTouchSystemColor="whiteColor"/>
+                                <string key="text">Lorem ipsum dolor sit er elit lamet, consectetaur cillium adipisicing pecu, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum. Nam liber te conscient to factor tum poen legum odioque civiuda.</string>
+                                <color key="textColor" systemColor="labelColor" cocoaTouchSystemColor="darkTextColor"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="14"/>
+                                <textInputTraits key="textInputTraits" autocapitalizationType="sentences"/>
+                            </textView>
                         </subviews>
                         <color key="backgroundColor" systemColor="systemBackgroundColor" cocoaTouchSystemColor="whiteColor"/>
+                        <constraints>
+                            <constraint firstItem="1qh-Ku-yhp" firstAttribute="leading" secondItem="yVS-NK-d6o" secondAttribute="leading" constant="63" id="0Kp-aQ-YmL"/>
+                            <constraint firstItem="OaY-6d-38O" firstAttribute="top" secondItem="vE7-Mo-tWY" secondAttribute="bottom" constant="30" id="36V-I6-2LP"/>
+                            <constraint firstItem="1qh-Ku-yhp" firstAttribute="top" secondItem="yVS-NK-d6o" secondAttribute="top" constant="25" id="3FP-da-k1v"/>
+                            <constraint firstItem="yVS-NK-d6o" firstAttribute="trailing" secondItem="ZSp-MM-L8Y" secondAttribute="trailing" constant="33" id="ALo-5r-ebZ"/>
+                            <constraint firstItem="vE7-Mo-tWY" firstAttribute="trailing" secondItem="OaY-6d-38O" secondAttribute="trailing" id="AlS-4l-KZH"/>
+                            <constraint firstItem="vE7-Mo-tWY" firstAttribute="centerX" secondItem="0AA-xd-Bo4" secondAttribute="centerX" id="HAH-rD-kbR"/>
+                            <constraint firstItem="yVS-NK-d6o" firstAttribute="bottom" secondItem="ZSp-MM-L8Y" secondAttribute="bottom" constant="71" id="QTT-bQ-MAq"/>
+                            <constraint firstItem="ZSp-MM-L8Y" firstAttribute="leading" secondItem="yVS-NK-d6o" secondAttribute="leading" constant="28" id="Qv0-Mv-pdh"/>
+                            <constraint firstItem="vE7-Mo-tWY" firstAttribute="leading" secondItem="OaY-6d-38O" secondAttribute="leading" id="SUP-ZZ-vxc"/>
+                            <constraint firstItem="vE7-Mo-tWY" firstAttribute="leading" secondItem="yVS-NK-d6o" secondAttribute="leading" constant="62" id="WMS-HG-P2r"/>
+                            <constraint firstItem="vE7-Mo-tWY" firstAttribute="top" secondItem="1qh-Ku-yhp" secondAttribute="bottom" constant="8" id="YYk-kb-XbC"/>
+                            <constraint firstItem="ZSp-MM-L8Y" firstAttribute="top" secondItem="OaY-6d-38O" secondAttribute="bottom" constant="16" id="Zhl-E4-Fdr"/>
+                            <constraint firstItem="1qh-Ku-yhp" firstAttribute="centerX" secondItem="0AA-xd-Bo4" secondAttribute="centerX" id="sTI-qF-agE"/>
+                        </constraints>
                         <viewLayoutGuide key="safeArea" id="yVS-NK-d6o"/>
                     </view>
                     <navigationItem key="navigationItem" id="IXi-9v-Lw5"/>
                     <connections>
-                        <outlet property="descriptionLabel" destination="SJ8-jg-ve1" id="f6I-MX-VqM"/>
+                        <outlet property="descriptionView" destination="ZSp-MM-L8Y" id="Ci6-xf-dg5"/>
                         <outlet property="imageView" destination="1qh-Ku-yhp" id="5uJ-aU-a5D"/>
                         <outlet property="nameLabel" destination="vE7-Mo-tWY" id="Fip-gR-6Cb"/>
                         <outlet property="priceLabel" destination="OaY-6d-38O" id="1PF-2c-EzE"/>
